# trustgate

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  db.rs  github.rs  main.rs  models.rs  pipeline.rs  startup.rs  state.rs
frontend/: index.html  package.json
frontend/src/: App.jsx  config.js
frontend/src/components/: DecisionViewPage.jsx
frontend/src/panels/: ChecksPanel.jsx  HistoryPanel.jsx  ReviewPanel.jsx  RulesPanel.jsx
